--- a/OFFERS-379/ro/index.html
+++ b/OFFERS-379/ro/index.html
@@ -191,6 +191,43 @@
 						<a data-fancybox class="button order" href="#order_form"> DETALII</a>
 					</div>
 				</div>
+				<div class="prod_item">
+					<div class="img">
+						<img src="img/prod11_1.jpg" alt>
+						<img src="img/prod11_2.jpg" alt>
+					</div>
+					<div class="description">
+						<div class="text">
+							<p class="prod_name">ISOLATION TAPE</p>
+							<div class="price">
+								<div class="old"><span>
+										<x-oldprice> 370</x-oldprice>
+									</span><small>
+										<x-currency> lei </x-currency>
+									</small></div>
+								<div class="new"><span>
+										<x-newprice> 185</x-newprice>
+									</span><small>
+										<x-currency> lei</x-currency>
+									</small> </div>
+							</div>
+							<div class="prod_description">Banda izolatoare auto adezivă de înaltă calitate va fi o soluție excelentă pentru bucătărie și baie. Aceasta servește ca o protecție fiabilă împotriva pătrunderii apei între baie (sau de exemplu chiuveta) și perete, are o aderență și o flexibilitate excelentă. Datorită acestor calități, banda poate fi utilizată nu numai pe suprafețe netede, dar și cele curbate.<br> <br> Avantaje:<ul>
+									<li>Material ecologic</li>
+									<li>Protejează împotriva mucegaiului</li>
+									<li>Ușor de instalat</li>
+							<li>Nu lasă urme</li>
+							<br>
+							<li>Specificații:</li>
+							<li>Dimensiune: 3m x 15cm</li>
+							<li>Culoare: Alb</li>
+								</ul>
+							
+
+							</div>
+						</div>
+						<a data-fancybox class="button order" href="#order_form"> DETALII</a>
+					</div>
+				</div>
 				<!-- /item -->
 			</div>
 			<!-- <a class="button order1" href="#size_table" data-fancybox>Размерная сетка</a> -->
