--- a/OFFERS-380/ru/index.html
+++ b/OFFERS-380/ru/index.html
@@ -260,7 +260,7 @@
       <div class="sect8__content">
         <div class="accordion">
           <div class="accordion__title ">
-            <p class="triger open"><span></span></p>
+            <p class="triger"><span></span></p>
             <p class="text">Кто мы?</p>
           </div>
           <p class="accordion__description">Мы интернет-маркетологи, занимается размещением рекламных компаний в
