--- a/OFFERS-380/ru/index.html
+++ b/OFFERS-380/ru/index.html
@@ -164,14 +164,14 @@
         <div class="sect6__item">
           <b class="sect6__title">ШАГ 1:</b>
           <p class="sect6__description">Нажмите на кнопку ниже и заполните все поля.</p>
-          <div class="box_btn"><a href="https://google.com" class="btn">Оставить заявку</a></div>
+          <div class="box_btn"><a href="https://google.com" target="_blank" class="btn">Оставить заявку</a></div>
         </div>
         <div class="sect6__item">
           <b class="sect6__title">ШАГ 2:</b>
           <p class="sect6__description">После того Вы оставили заявку, напишите нашему менеджеру и укажите
             предпочтительный способ связи. Менеджер проверяет, подходит ли ваш аккаунт для сдачи и обязательно сообщает
             Вам о принятом решении. </p>
-          <div class="box_btn"><a href="https://google.com" class="btn">Отправить сообщение</a></div>
+          <div class="box_btn"><a href="https://google.com" target="_blank" class="btn">Отправить сообщение</a></div>
         </div>
         <p class="text">Мы очень надеемся на долгосрочное и плодотворное сотрудничество!</p>
       </div>
