--- a/OFFERS-380/ru/index.html
+++ b/OFFERS-380/ru/index.html
@@ -23,9 +23,9 @@
   <section class="sect1">
     <div class="sect1__container">
       <div class="sect1__content">
-        <h1 class="title_big">Сдай свои аккаунт facebook в <b>аренду</b> </h1>
+        <h1 class="title_big">Сдай свой аккаунт facebook в <b>аренду</b> </h1>
         <p class="subtitle">
-          и <b>зарабатывай</b> на этом!
+          и <b>зарабатывай</b> на этом 235 гривен в неделю
         </p>
         <p class="text">
           Это безопасно и просто, а самое главное, не нужно работать, чтобы получать оплату <b>СЕЙЧАС!</b>
@@ -41,10 +41,10 @@
 
         <div class="text">
           <p><b>Мы - команда интернет-маркетологов, занимающаяся рекламой на Facebook.</b></p>
-          <p>Объемы рекламных компаний с каждым месяцем увеличивается и нам стало не хватать собственных рекламных
-            аккаунтов, по этому мы берем их в аренду, при этом у рекламного аккаунта нет никакого влияния на ваш личный
+          <p>Объемы рекламных кампаний с каждым месяцем увеличиваются и нам стало не хватать собственных рекламных
+            аккаунтов, поэтому мы берем их в аренду, при этом у рекламного аккаунта нет никакого влияния на ваш личный
             аккаунт и вы сможете продолжать им пользоваться как обычно.</p>
-          <p><i>Такое сотрудничество позволит вам зарабатывать до 000 руб. в месяц. Выплаты производятся каждую
+          <p><i>Такое сотрудничество позволит вам зарабатывать до 940 гривен в месяц. Выплаты производятся каждую
               неделю.</i></p>
         </div>
         <img src="img/sect2.png" alt="">
@@ -59,9 +59,7 @@
         <div class="text">
           <p><b>Полная анонимность гарантирована</b> <br>
             Вы продолжаете пользоваться аккаунтом как обычно, в нём <b class="decoration">не будет создано никакой
-              искусственной активности в виде рассылки сообщений, добавления друзей, лайков и т.п</b>. Только запуск
-            рекламы.
-            И то не от Вашего имени, а с помощью бизнес-менеджера (внутренний инструмент Facebook, который создается на
+              искусственной активности в виде рассылки сообщений, добавления друзей, лайков и т.п</b>. Только запуск рекламы, который будет реализован не от Вашего имени, а с помощью бизнес-менеджера  (внутренний инструмент Facebook, который создается на
             базе Вашего аккаунта).
             <br>
             Полная анонимность гарантирована.
@@ -309,19 +307,14 @@
       </div>
     </div>
   </section>
-  <div class="policy__bot">
-		<div class="policy_wrap">
-			<center>
-        <br>
-        <span>GADGET SHOP, Calle de Boldano, 33, 28027 Madrid, Span</span>
-              <br>
-        <a href="/privacypolicy" target="_blank">Privacy policy</a> <br>
-        <a href="/general-conditions-of-sale" target="_blank">General conditions of sale</a> <br>
-        <a href="/legal-warning" target="_blank">Legal warning</a>
-        <br> <br>
-      </center>
-		</div>
-	</div>
+<footer class="footer" >
+  <div class="container">
+   
+      <h2 class="title">Сдать свой аккаунт за 235 гривен в неделю</h2>
+      <div class="box_btn"><a href="https://google.com" target="_blank" class="btn">Оставить заявку</a></div>
+   
+  </div>
+</footer>
   <script src="libs/carousel/owl.carousel.min.js"></script>
 
   <script src="js/common.js"></script>
