--- a/TRNSLT-222/bg/index.html
+++ b/TRNSLT-222/bg/index.html
@@ -280,7 +280,7 @@
                     <div class="product-details">
                         <div>
                             <p style="text-align: center;"> Естествено удължаване на косата за една секунда!<br> На най-ниска цена, <br>
-                                <span style="color: #ff0000;"><strong><x-newprice> 82 лева</x-newprice><x-currency> €</x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Тази цена е валидна само днес!!!!</span> <br> След това Екстеншъните за косата могат да бъдат закупени на пълна цена<span style="color: #ff0000;"><strong><x-oldprice> 164 лева</x-oldprice><x-currency> €</x-currency></strong></span><br><strong><span style="color: #ffffff;">
+                                <span style="color: #ff0000;"><strong><x-newprice> 82 лева</x-newprice><x-currency>  </x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Тази цена е валидна само днес!!!!</span> <br> След това Екстеншъните за коса могат да бъдат закупени на пълната цена <span style="color: #ff0000;"><strong><x-oldprice> 164 лева</x-oldprice><x-currency>  </x-currency></strong></span><br><strong><span style="color: #ffffff;">
 							<br>
                             </span></strong></p><strong>
                             <ul>
@@ -298,7 +298,7 @@
                         </p>
                         <div>
                             <h3>
-                                <span class="notranslate"><em> Екстеншъните за косата са идеални за придаване на дължина, плътност и обем на косата ви по невидим начин, така че ще може да се насладите на разкошна прическа!</em></span>
+                                <span class="notranslate"><em> Екстеншъните за коса са идеални за придаване на дължина, плътност и обем на косата ви по дискретен начин, така че ще може да се наслаждавате на разкошна прическа!</em></span>
                             </h3>
                             <p>
                                 <img src="img/img1.gif" alt width="400" height="400" data-pagespeed-url-hash="1825177632" \>
@@ -308,7 +308,7 @@
                             </h3>
                           
                             <p>
-                                <span class="notranslate"> Hair Extension моментално придава обем и дължина на естествената ви коса и изглежда естествено! Просто поставете на главата си и покрийте със собствената си коса, за да скриете прозрачната еластична лента!</span>
+                                <span class="notranslate"> Hair Extension моментално придава обем и дължина на естествената ви коса и изглежда естествено! Просто поставете на главата си, прикрепете със специалните клипси и покрийте със собствената си коса!</span>
                             </p>
 
                             <p>
@@ -441,7 +441,7 @@
                             <div class="score">
                                 <span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span>
                             </div>
-                            <span class="sl-subhead-title"> 169 отзива</span>
+                            <span class="sl-subhead-title"> 147 отзива</span>
                         </div>
                         <div class="star-bar">
                             <div> 5<i class="iconfont icon-star_full"></i><span>
@@ -517,7 +517,7 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> Възхитена съм!!! Страхотна коса. Не се различава от естествената,  изобщо не се усеща на главата. Но най-важното е, че  може да бъда накъдрена или изправена, когато пожелаете!!! Плюс  това в момента има разпродажба и си купих много евтино боядисана коса под формата на плитка, но тя може да се разплете и да си направите всякаква прическа. Оценката ми е отлична!</p>
+                                    <p class="reviews-detail"> Възхитена съм!!! Страхотна коса. Не се различава от естествената,  изобщо не се усеща на главата. Но най-важното е, че  може да бъде накъдрена или изправена, когато пожелаете!!! Плюс  това в момента има разпродажба и си купих много евтино боядисана коса под формата на плитка, но тя може да се разплете и да си направите всякаква прическа. Оценката ми е отлична!</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
@@ -604,7 +604,7 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> Купих 2 варианта, един рус 50 см и 70 см като моя цвят. Харесва ми. Приятелите ми също харесаха новите ми образи. Мога да променям прическата си. Навивам русата коса и получавам ефект омбре! Слагам я и се получава страхота дължина, която никога няма да израсне сама. Възхитена съм!.Мисля по-късно да я боядисам някакъв ярък цвят. Това, което ми хареса, е бързото закрепване. Благодаря много! Препоръчвам ви на всички мои приятелки.</p>
+                                    <p class="reviews-detail"> Купих два варианта, един рус 50 см и 70 см като моя цвят. Харесва ми. Приятелите ми също харесаха новите ми образи. Мога да променям прическата си. Навивам русата коса и получавам ефект омбре! Слагам я и се получава страхота дължина, която никога няма да израсне сама. Възхитена съм!.Мисля по-късно да я боядисам някакъв ярък цвят. Това, което ми хареса, е бързото закрепване. Благодаря много! Препоръчвам ви на всички мои приятелки.</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
@@ -654,7 +654,7 @@
                                             <span class="iconfont icon-star_full"></span>
                                         </div>
                                     </div>
-                                    <p class="reviews-detail"> Отлично качество, естествен вид, еластичната лента не притиска и изобщо не се забелязва. Препоръчвам!</p>
+                                    <p class="reviews-detail"> Отлично качество, естествен вид, въобще не се усеща по време на носене. Препоръчвам!</p>
                                     <div class="helpful-num" data-num="0"></div>
                                 </div>
                             </div>
