--- a/TRNSLT-222/pl/index.html
+++ b/TRNSLT-222/pl/index.html
@@ -280,7 +280,7 @@
                     <div class="product-details">
                         <div>
                             <p style="text-align: center;"> Przedłużanie włosów metodą naturalną w jedną sekundę!<br> Za najniższą cenę,<br>
-                                <span style="color: #ff0000;"><strong><x-newprice> 190 zł</x-newprice><x-currency> €</x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Ta cena jest ważna tylko dzisiaj!!!!</span> <br> Następnie można zakupić Hair Extension za pełną cenę. <span style="color: #ff0000;"><strong><x-oldprice> 380 zł</x-oldprice><x-currency> €</x-currency></strong></span><br><strong><span style="color: #ffffff;">
+                                <span style="color: #ff0000;"><strong><x-newprice> 190 zł</x-newprice><x-currency> </x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Ta cena jest ważna tylko dzisiaj!!!!</span> <br> Następnie można zakupić Hair Extension za pełną cenę. <span style="color: #ff0000;"><strong><x-oldprice> 380 zł</x-oldprice><x-currency> </x-currency></strong></span><br><strong><span style="color: #ffffff;">
 							<br>
                             </span></strong></p><strong>
                             <ul>
@@ -308,7 +308,7 @@
                             </h3>
                           
                             <p>
-                                <span class="notranslate"> Hair Extension natychmiast dodaje objętości i długości do Twoich naturalnych włosów i wygląda naturalnie! Wystarczy założyć na głowę i przykryć własnymi włosami, aby zakryć przezroczystą gumkę!</span>
+                                <span class="notranslate"> Hair Extension natychmiast dodaje objętości i długości do Twoich naturalnych włosów i wygląda naturalnie! Wystarczy upiąć włosy spinkami Clip-In i przykryć własnymi włosami.</span>
                             </p>
 
                             <p>
@@ -440,7 +440,7 @@
                             <div class="score">
                                 <span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span>
                             </div>
-                            <span class="sl-subhead-title"> 169 recenzji</span>
+                            <span class="sl-subhead-title"> 147 recenzji</span>
                         </div>
                         <div class="star-bar">
                             <div> 5 <i class="iconfont icon-star_full"></i><span>
