--- a/TRNSLT-222/ro/index.html
+++ b/TRNSLT-222/ro/index.html
@@ -280,7 +280,7 @@
                     <div class="product-details">
                         <div>
                             <p style="text-align: center;"> Extensiie păr naturală în câteva clipe!<br> La cel mai mic preț,<br>
-                                <span style="color: #ff0000;"><strong><x-newprice> 210 Lei</x-newprice><x-currency> €</x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Acest preț este valabil doar astăzi!!!!</span> <br> Extensia de păr poate fi achiziționată la prețul complet<span style="color: #ff0000;"><strong><x-oldprice> 420 Lei</x-oldprice><x-currency> €</x-currency></strong></span><br><strong><span style="color: #ffffff;">
+                                <span style="color: #ff0000;"><strong><x-newprice> 210 Lei</x-newprice><x-currency>  </x-currency></strong> </span><br>	<span style="background-color: #ff0000; color: #ffffff; font-weight: 900;"> Acest preț este valabil doar astăzi!!!!</span> <br> Extensia de păr poate fi achiziționată la prețul complet<span style="color: #ff0000;"><strong><x-oldprice> 420 Lei</x-oldprice><x-currency>  </x-currency></strong></span><br><strong><span style="color: #ffffff;">
 							<br>
                             </span></strong></p><strong>
                             <ul>
@@ -308,7 +308,7 @@
                             </h3>
                           
                             <p>
-                                <span class="notranslate"> Extensia de păr conferă părului volum și lungime intr-un aspect natural! Trebuie doar sa aplicați extensia și sa o acoperiți cu propriul păr pentru a închide elasticul!</span>
+                                <span class="notranslate"> Extensia de păr conferă părului volum și lungime intr-un aspect natural! Pur și simplu atașați-vă părul cu agrafele Clip-In și acoperiți-l cu propriul păr.</span>
                             </p>
 
                             <p>
@@ -440,7 +440,7 @@
                             <div class="score">
                                 <span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span><span class="iconfont icon-star_full"></span>
                             </div>
-                            <span class="sl-subhead-title"> 169 recenzii</span>
+                            <span class="sl-subhead-title"> 147 recenzii</span>
                         </div>
                         <div class="star-bar">
                             <div> 5<i class="iconfont icon-star_full"></i><span>
