--- a/OFFERS-384/ru/index.html
+++ b/OFFERS-384/ru/index.html
@@ -24,8 +24,8 @@
     <div class="wrap">
         <!--offer-->
         <section class="offer">
-            <div class="sub-title">+ЛЮБОЕ УКРАШЕНИЕ В ПОДАРОК</div>
-            <div class="main-title">STARRY SKY WATCH</div>
+            <div class="sub-title"> STARRY SKY WATCH</div>
+            <div class="main-title">+ЛЮБОЕ УКРАШЕНИЕ В ПОДАРОК</div>
             <!--box-->
             <div class="box">
                 <div class="sale">АКЦИЯ<b>50%</b>СКИДКА</div>
@@ -318,8 +318,8 @@
         <!--/order-steps-->
         <!--offer-->
         <section class="offer">
-            <div class="sub-title">+ЛЮБОЕ УКРАШЕНИЕ В ПОДАРОК</div>
-            <div class="main-title">STARRY SKY WATCH</div>
+            <div class="sub-title">STARRY SKY WATCH</div>
+            <div class="main-title">+ЛЮБОЕ УКРАШЕНИЕ В ПОДАРОК</div>
             <div class="box">
                 <div class="sale">АКЦИЯ<b>50%</b>СКИДКА</div>
                 <!--bullet-->
