--- a/OFFERS-390/bg/index.html
+++ b/OFFERS-390/bg/index.html
@@ -44,11 +44,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Обичайна цена:</p>
-                        <div class="val"><span class="price_land_s2"> 170 ЛЕВА</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s2"> 170 ЛЕВА</span></div>
                     </div>
                     <div class="new">
                         <p> Цена днес:</p>
-                        <div class="val"><span class="price_land_s1"> 85 ЛЕВА</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s1"> 85 ЛЕВА</span></div>
                     </div>
                 </div>
                 <!--/price-->
@@ -399,11 +399,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Обичайна цена:</p>
-                        <div class="val"><span class="price_land_s2"> 170 ЛЕВА</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s2"> 170 ЛЕВА</span></div>
                     </div>
                     <div class="new">
                         <p> Цена днес:</p>
-                        <div class="val"><span class="price_land_s1"> 85 ЛЕВА</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s1"> 85 ЛЕВА</span></div>
                     </div>
                 </div>
                 <!--/price-->
