--- a/OFFERS-390/ro/index.html
+++ b/OFFERS-390/ro/index.html
@@ -44,11 +44,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Preț obișnuit:</p>
-                        <div class="val"><span class="price_land_s2"> 420  LEI</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s2"> 420  LEI</span> </div>
                     </div>
                     <div class="new">
                         <p> Prețul astăzi:</p>
-                        <div class="val"><span class="price_land_s1"> 210  LEI</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s1"> 210  LEI</span> </div>
                     </div>
                 </div>
                 <!--/price-->
@@ -399,11 +399,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Preț obișnuit:</p>
-                        <div class="val"><span class="price_land_s2"> 420  LEI</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s2"> 420  LEI</span> </div>
                     </div>
                     <div class="new">
                         <p> Prețul astăzi:</p>
-                        <div class="val"><span class="price_land_s1"> 210  LEI</span><i class="price_land_curr">€</i></div>
+                        <div class="val"><span class="price_land_s1"> 210  LEI</span> </div>
                     </div>
                 </div>
                 <!--/price-->
