--- a/OFFERS-390/bg/index.html
+++ b/OFFERS-390/bg/index.html
@@ -44,11 +44,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Обичайна цена:</p>
-                        <div class="val"><span class="price_land_s2"> 170 ЛЕВА</span></div>
+                        <div class="val"><span class="price_land_s2"> 170 лв.</span></div>
                     </div>
                     <div class="new">
                         <p> Цена днес:</p>
-                        <div class="val"><span class="price_land_s1"> 85 ЛЕВА</span></div>
+                        <div class="val"><span class="price_land_s1"> 85 лв.</span></div>
                     </div>
                 </div>
                 <!--/price-->
@@ -284,7 +284,7 @@
                 </div>
                 <div class="desc">
                     <strong> Харесване: 354</strong>
-                    <p> Използвам го вече една седмица, много е удобно, ластиците въобще не се чувстват, няма дискомфорт.</p>
+                    <p> Използвам го вече една седмица, много е удобно, клипсите въобще не се чувстват, няма дискомфорт.</p>
                 </div>
             </div>
             <!--/post-->
@@ -329,7 +329,7 @@
                 </div>
                 <div class="desc">
                     <strong> Харесване: 621</strong>
-                    <p> Тук купих шноли за дъщеря си. Много евтини, естествено дърво, ярки, перфектно придържат косата.</p>
+                    <p> Тук купих мъниста за коса за дъщеря си. Много евтини, естествено дърво, ярки, перфектно придържат косата.</p>
                 </div>
             </div>
             <!--/post-->
@@ -399,11 +399,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Обичайна цена:</p>
-                        <div class="val"><span class="price_land_s2"> 170 ЛЕВА</span></div>
+                        <div class="val"><span class="price_land_s2"> 170 лв.</span></div>
                     </div>
                     <div class="new">
                         <p> Цена днес:</p>
-                        <div class="val"><span class="price_land_s1"> 85 ЛЕВА</span></div>
+                        <div class="val"><span class="price_land_s1"> 85 лв.</span></div>
                     </div>
                 </div>
                 <!--/price-->
