--- a/OFFERS-385/ru/index.html
+++ b/OFFERS-385/ru/index.html
@@ -44,11 +44,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Обычная цена:</p>
-                        <div class="val"><span class="price_land_s2"> 98</span></div>
+                        <div class="val"><span class="price_land_s2"> 98 € </span></div>
                     </div>
                     <div class="new">
                         <p> Цена сегодня:</p>
-                        <div class="val"><span class="price_land_s1"> 49</span></div>
+                        <div class="val"><span class="price_land_s1"> 49 €</span></div>
                     </div>
                 </div>
                 <!--/price-->
@@ -154,7 +154,7 @@
                     <div class="txt">
                         <h4 style="display: block;
                         min-height: 60px;"> Чокер Butterfly</h4>
-                        <p> Чоппер имеет оригинальный дизайн и непревзойденное качество. Сложно устоять перед такой красотой. Стильная и оригинальная цепочка с 5 подвесками в виде бабочек. Цвет: серебряный</p>
+                        <p> Чоппер имеет оригинальный дизайн и непревзойденное качество. Сложно устоять перед такой красотой. Стильная и оригинальная цепочка с 5 подвесками в виде бабочек. <br> Цвет: серебряный</p>
                     </div>
                 </li>
                 <li>
@@ -169,8 +169,8 @@
                     <img src="img/s3-im3.jpg" alt style="max-width: 200px;">
                     <div class="txt">
                         <h4 style="display: block;
-                        min-height: 60px;"> Black Amulet </h4>
-                        <p> Оригинальный и стильный амулет . Магический пентакль Соломона защищает своего владельца от врагов, приносит своему хозяину богатство, помогает усправляться с различного рода зависимостями, а также помогают обрести здоровье и излечиться от опасных болезней.</p>
+                        min-height: 60px;"> Black Bracelet</h4>
+                        <p>Удивите своего любимого человека, подарив ему браслет с надписью "Я тебя люблю"на 100 языках мира. Ваш любимый человек точно не останется равнодушным. Надпись можно увидеть посмотрев, в сам камень, или навести луч света  и надпись высветиться.</p>
                     </div>
                 </li>
                 <li>
@@ -206,7 +206,7 @@
         <section class="s4">
             <h2 class="title"> ФОТОГАЛЕРЕЯ<span> </span></h2>
             <img class="image" src="img/result-im1.jpg" alt>
-            <img class="gif" src="img/gif2.gif" alt>
+            <img class="gif" src="img/gif2.png" alt>
             <a href="#order" class="button-m"> ЗАКАЗАТЬ</a>
             <div class="stock"> Осталось<b class="lastpack"> 14</b> шт по акции</div>
         </section>
@@ -325,11 +325,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Обычная цена:</p>
-                        <div class="val"><span class="price_land_s2"> 98</span></div>
+                        <div class="val"><span class="price_land_s2"> 98 €</span></div>
                     </div>
                     <div class="new">
                         <p> Цена сегодня:</p>
-                        <div class="val"><span class="price_land_s1"> 49</span></div>
+                        <div class="val"><span class="price_land_s1"> 49 €</span></div>
                     </div>
                 </div>
                 <!--/price-->
