--- a/OFFERS-390/ro/index.html
+++ b/OFFERS-390/ro/index.html
@@ -6,6 +6,8 @@
 <meta property="og:description" content="Extensiones de cabello instantáneas">
 <meta property="og:image" content="https://i.imgur.com/T8VNVhz.jpg">
 <meta property="og:type" content="website">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
 	<!-- Favicon -->
     <link rel="icon" href="img/favicon.ico" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
