--- a/OFFERS-385/pt/index.html
+++ b/OFFERS-385/pt/index.html
@@ -153,7 +153,7 @@
                     <img src="img/s3-im1.jpg" alt style="max-width: 200px;">
                     <div class="txt">
                         <h4 style="display: block;
-                        min-height: 60px;"> Чокер Butterfly</h4>
+                        min-height: 60px;">Gargantilha Butterfly</h4>
                         <p> A gargantilha tem um desenho original e uma qualidade insuperável. É difícil resistir a tal beleza. Corrente elegante e original com 5 pingentes em forma de borboletas.<br> Cor: prata</p>
                     </div>
                 </li>
