--- a/OFFERS-393/bg/index.html
+++ b/OFFERS-393/bg/index.html
@@ -42,11 +42,10 @@
             <div class="sales_wrap">
                 <div class="sales">
                     <div class="price">
-                        <span class="current-price">49</span>
-                        <span class="symbol"> €</span>
-                    </div>
+                        <span class="current-price">82 лв.</span>
+                                           </div>
                     <div class="bdbox  total_money_box">
-                        <label class="red bdsf"><del> 98 €</del></label>
+                        <label class="red bdsf"><del> 164 лв. </del></label>
                     </div>
                 </div>
                 <p class="text-sal"><b>Отстъпка 50%</b></p>
@@ -55,7 +54,7 @@
 
 
             <div class="service">
-                <span>Доставка в рамките на 2-5 дни</span>
+                <span>Доставка в рамките на 2-4 дни</span>
                 <span>Плащате при получаване</span>
                 <span>Гаранция за качество</span>
             </div>
@@ -116,9 +115,9 @@
 
             <div class="bdbox  total_money_box">
                 <label class="bdxx"> Поръчайте</label>
-                <label class="red bdsf">Редовна цена: 98 €</label>
+                <label class="red bdsf">Редовна цена: 164 лв. </label>
 
-                <label class="red bdsp">Цена с отстъпка:<span id="keep_price_two">49 €<span></span></span></label>
+                <label class="red bdsp">Цена с отстъпка:<span id="keep_price_two">82 лв. <span></span></span></label>
             </div>
             <hr class="sp_hr">
             <div class="bdbox">
