--- a/OFFERS-385/es/index.html
+++ b/OFFERS-385/es/index.html
@@ -44,11 +44,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Precio Habitual:</p>
-                        <div class="val"><span class="price_land_s2"> 98</span></div>
+                        <div class="val"><span class="price_land_s2"> 98€</span></div>
                     </div>
                     <div class="new">
                         <p> Precio hoy:</p>
-                        <div class="val"><span class="price_land_s1"> 49</span></div>
+                        <div class="val"><span class="price_land_s1"> 49€</span></div>
                     </div>
                 </div>
                 <!--/price-->
@@ -325,11 +325,11 @@
                 <div class="price">
                     <div class="old">
                         <p> Precio Habitual:</p>
-                        <div class="val"><span class="price_land_s2"> 98</span></div>
+                        <div class="val"><span class="price_land_s2"> 98€</span></div>
                     </div>
                     <div class="new">
                         <p> Precio hoy:</p>
-                        <div class="val"><span class="price_land_s1"> 49</span></div>
+                        <div class="val"><span class="price_land_s1"> 49€</span></div>
                     </div>
                 </div>
                 <!--/price-->
