--- a/OFFERS-393/pl/index.html
+++ b/OFFERS-393/pl/index.html
@@ -42,11 +42,11 @@
             <div class="sales_wrap">
                 <div class="sales">
                     <div class="price">
-                        <span class="current-price">49</span>
-                        <span class="symbol"> €</span>
+                        <span class="current-price">190</span>
+                        <span class="symbol"> zł</span>
                     </div>
                     <div class="bdbox  total_money_box">
-                        <label class="red bdsf"><del> 98 €</del></label>
+                        <label class="red bdsf"><del> 380 zł</del></label>
                     </div>
                 </div>
                 <p class="text-sal"><b>Rabat 50%</b></p>
@@ -116,9 +116,9 @@
 
             <div class="bdbox  total_money_box">
                 <label class="bdxx"> ZAMÓWIĆ</label>
-                <label class="red bdsf">STARA CENA: 98 €</label>
+                <label class="red bdsf">STARA CENA: 380 zł</label>
 
-                <label class="red bdsp">NOWA CENA:<span id="keep_price_two">49 €<span></span></span></label>
+                <label class="red bdsp">NOWA CENA:<span id="keep_price_two">190 zł<span></span></span></label>
             </div>
             <hr class="sp_hr">
             <div class="bdbox">
