--- a/OFFERS-393/ro/index.html
+++ b/OFFERS-393/ro/index.html
@@ -42,11 +42,11 @@
             <div class="sales_wrap">
                 <div class="sales">
                     <div class="price">
-                        <span class="current-price">49</span>
-                        <span class="symbol"> €</span>
+                        <span class="current-price">210</span>
+                        <span class="symbol"> lei</span>
                     </div>
                     <div class="bdbox  total_money_box">
-                        <label class="red bdsf"><del> 98 €</del></label>
+                        <label class="red bdsf"><del> 420 lei</del></label>
                     </div>
                 </div>
                 <p class="text-sal"><b>Reducere 50%</b></p>
@@ -108,7 +108,7 @@
     </section>
 
     <section id="page-order" class="page-order">
-        <h2 class="title" id="product-info"> (Reducere 50%) 3D Clip-In Bangs Hair Extensions</h2>
+        <h2 class="title" id="product-info"> (Reducere 50%пп) 3D Clip-In Bangs Hair Extensions</h2>
         <form id="form" name="form" method="post">
           
 
@@ -116,9 +116,9 @@
 
             <div class="bdbox  total_money_box">
                 <label class="bdxx"> Comandă</label>
-                <label class="red bdsf"> Preț normal: 98 €</label>
+                <label class="red bdsf"> Preț normal: 420 lei</label>
 
-                <label class="red bdsp"> Preț redus:<span id="keep_price_two">49 €<span></span></span></label>
+                <label class="red bdsp"> Preț redus:<span id="keep_price_two">210 lei<span></span></span></label>
             </div>
             <hr class="sp_hr">
             <div class="bdbox">
