--- a/OFFERS-380/es/index.html
+++ b/OFFERS-380/es/index.html
@@ -17,8 +17,8 @@
     <div class="sect1__container">
       <div class="sect1__content">
         <h1 class="title_big"> renta tu cuenta de<b> Facebook</b> </h1>
-        <p class="subtitle"> y<b> gana</b> en este 000 euros por semana</p>
-        <p class="text"> Es seguro y fácil y, lo que es más importante, no tienes que trabajar para que te paguen.<b> ¡AHORA!</b>
+        <p class="subtitle"> y<b> gana</b> hasta 000 euros por semana</p>
+        <p class="text"> Es seguro y fácil. Lo más importante es que AHORA no tienes que trabajar para que te paguen.<b> para que te paguen.</b>
         </p>
         <div class="box_btn"><a href="#main" class="btn"> Para obtener más información</a></div>
       </div>
@@ -31,7 +31,7 @@
 
         <div class="text">
           <p><b> Somos un equipo de comercializadores de Internet dedicados a la publicidad en Facebook.</b></p>
-          <p> El volumen de las campañas publicitarias aumenta cada mes y nos hemos quedado cortos de nuestras propias cuentas publicitarias, por lo que las alquilamos, mientras que la cuenta publicitaria no tiene influencia en tu cuenta personal y puedes seguir usándola como de costumbre.</p>
+          <p> El volumen de las campañas publicitarias aumenta cada mes y nuestras propias cuentas ya no dan abasto, con lo cuál las alquilamos. De hecho, la cuenta publicitaria no influye en nada a la tuya, podrás seguir usándola como de costumbre.</p>
           <p><i> Esta cooperación le permitirá ganar hasta 000 euros por mes. Los pagos se realizan cada semana.</i></p>
         </div>
         <img src="img/sect2.png" alt>
@@ -44,7 +44,7 @@
       <div class="sect3__content">
 
         <div class="text">
-          <p><b> El anonimato completo está garantizado</b> <br> Continúas usando tu cuenta como de costumbre, en ella<b class="decoration"> no se creará ninguna actividad artificial en forma de enviar mensajes, agregar amigos, me gusta, etc.</b> ... Solo el lanzamiento de publicidad, que se implementará no en tu nombre, sino con la ayuda de un administrador comercial (una herramienta interna de Facebook que se crea sobre la base de su cuenta).<br> El anonimato completo está garantizado.</p>
+          <p><b> El anonimato completo está garantizado</b> <br> Tu sigues usando la cuenta como de costumbre,<b class="decoration"> no se creará ninguna actividad artificial en forma de enviar mensajes, agregar amigos, me gusta, etc.</b> ... Tan solo lanzamos anuncios que no se implementarán en tu nombre, sino con la ayuda de un administrador de negocios (la herramienta interna de Facebook que se crea en tu cuenta).<br> El anonimato completo está garantizado.</p>
         </div>
       </div>
     </div>
@@ -56,11 +56,11 @@
         <div class="sect4__content--item requirements">
           <p class="title"> Requisitos de la cuenta:</p>
           <ul class="list">
-            <li class="list__item"> La cuenta ha existido por más de 12 meses</li>
-            <li class="list__item"> La cuenta debe tener actividad (gustos, mensajes, reposts)</li>
+            <li class="list__item"> La existencia de la cuenta es de más de 12 meses.</li>
+            <li class="list__item"> Debe ser una cuenta con actividad (me gustas, mensajes, repost)</li>
             <li class="list__item"> Información completa, foto, nombre real, propietario 18+</li>
-            <li class="list__item"> Número de teléfono verificado, correo electrónico</li>
-            <li class="list__item"> La cuenta no se ha rentado previamente</li>
+            <li class="list__item"> Número de teléfono y correo electrónico verificados.</li>
+            <li class="list__item"> La cuenta no ha sido alquilada previamente.</li>
             <li class="list__item"> La cuenta no debe aparecer en los servicios de aumento de suscriptores</li>
             <li class="list__item"> Facebook Ads Manager aún no se ha utilizado</li>
           </ul>
@@ -71,7 +71,7 @@
             <li class="list__item"> Cambiar la contraseña sin razón aparente</li>
             <li class="list__item"> Entrar en Ads Manager</li>
             <li class="list__item"> Crear cualquier anuncio</li>
-            <li class="list__item"> Vuelver a rentar tu cuenta</li>
+            <li class="list__item"> Voelver a rentar tu cuenta</li>
             <li class="list__item"> Violar las reglas de la red social.</li>
           </ul>
         </div>
@@ -108,7 +108,7 @@
       <br>
       <div class="sect6__content">
         <div class="sect6__item">
-          <b class="sect6__title"> PASO 1:</b>
+          <b class="sect6__title"> Después de haber dejado una solicitud, escriba a nuestro gerente e indique el método de comunicación preferido. El gerente verifica si tu cuenta es adecuada para rentar y informarte sobre la decisión.</b>
           <p class="sect6__description"> Haga clic en el botón de abajo y complete todos los campos.</p>
           <div class="box_btn"><a href="https://google.com" target="_blank" class="btn"> Solicitar</a></div>
         </div>
@@ -199,17 +199,17 @@
             <p class="triger"><span></span></p>
             <p class="text"> ¿Quienes somos?</p>
           </div>
-          <p class="accordion__description"> Somos comercializadores de Internet, nos dedicamos a la colocación de campañas publicitarias en Facebook.</p>
+          <p class="accordion__description"> Somos un equipo de marketing y nos dedicamos a emprender campañas publicitarias en Facebook.</p>
           <div class="accordion__title">
             <p class="triger"><span></span></p>
-            <p class="text"> ¿Puedo usar mi cuenta mientras alquilo?</p>
+            <p class="text"> ¿Puedo usar mi cuenta mientras la alquilo?</p>
           </div>
           <p class="accordion__description"> Puede usar su cuenta como de costumbre, solo usamos Ads Manager de Facebook.</p>
           <div class="accordion__title">
             <p class="triger"><span></span></p>
             <p class="text"> ¿Por qué su empresa necesita esto?</p>
           </div>
-          <p class="accordion__description"> Necesitamos poner tantos anuncios en Facebook como sea posible, pero la red social limita la cantidad de banners que se pueden publicar desde una página. Sería posible crear nuevas cuentas, pero Facebook prohíbe publicar anuncios de páginas recién creadas y no podemos esperar un año entero. Por lo tanto, te ofrecemos una cooperación mutuamente beneficiosa.</p>
+          <p class="accordion__description"> Necesitamos poner tantos anuncios en Facebook como sea posible, pero la red social limita la cantidad de banners que se pueden publicar desde una página. Sería posible crear nuevas cuentas, pero Facebook prohíbe publicar anuncios en páginas recién creadas y no podemos esperar un año entero. Por lo tanto, te ofrecemos una cooperación mutuamente beneficiosa.</p>
           <div class="accordion__title">
             <p class="triger"><span></span></p>
             <p class="text"> ¿Estás rompiendo las reglas?</p>
@@ -239,7 +239,7 @@
 <footer class="footer">
   <div class="container">
    
-      <h2 class="title"> Alquile tu cuenta por 000 eur por semana</h2>
+      <h2 class="title"> Alquila tu cuenta por 000 eur semanales</h2>
       <div class="box_btn"><a href="https://google.com" target="_blank" class="btn"> Solicitar</a></div>
    
   </div>
